order_management_micro/deploy/order-management-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-management-ingress
  annotations:
    konghq.com/strip-path: 'true'
    # The annotation konghq.com/strip-path: 'true' indicates that Kong should strip the path /order before forwarding the request to the backend service, so the service will receive the request without the path prefix.
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /order
        pathType: ImplementationSpecific
        backend:
          service:
            name: order-management-service
            port:
              number: 3030
